detalles y mejoras * feed estático * leyenda de video con estilos * página de prensa * panel paypal tester * botones paypal y tarjetas

--- a/view/css/about.css
+++ b/view/css/about.css
@@ -42,6 +42,15 @@ div.field {
     height: 285px;
 	margin: 10px 0px;
 }
+#about-content .post .embed-legend{
+	border-left: 2px solid #58595B;
+	color: #9B9B9D;
+	font-size: 0.9em;
+	width: 495px;
+	padding-left: 10px;
+	margin-bottom:10px;
+	font-style:oblique
+}
 #about-content .post .gallery{
 	margin-bottom: 10px !important;
 }
