--- a/view/css/blog.css
+++ b/view/css/blog.css
@@ -64,6 +64,19 @@ div.widget.blog-content-module  .embed,
     height: 285px;
 	margin: 10px  18px;
 }
+
+div.widget.blog-content-module  .embed-legend,
+#blog-content .post .embed-legend{
+	border-left: 2px solid #58595B;
+	color: #9B9B9D;
+	font-size: 0.9em;
+	margin-left: 16px;
+	width: 495px;
+	padding-left: 10px;
+	margin-bottom:10px;
+	font-style:oblique
+}
+
 div.widget.blog-content-module  .gallery-image,
 #blog-content .post .gallery-image{
 	text-align:left;
