--- a/view/css/project/widget/updates.css
+++ b/view/css/project/widget/updates.css
@@ -62,6 +62,18 @@ div.widget.project-updates > div {
     height: 285px;
 	margin: 10px  18px;
 }
+
+.project-updates .post .embed-legend{
+	border-left: 2px solid #58595B;
+	color: #9B9B9D;
+	font-size: 0.9em;
+	margin-left: 16px;
+	width: 495px;
+	padding-left: 10px;
+	margin-bottom:10px;
+	font-style:oblique
+}
+
 .project-updates .widget.post .gallery-image{
 	text-align:left;
 }
