Arreglillos * proyectos fuera de campaña a cero dias * feed en la portada del admin en columna lateral * texto de ronda en el termometro

--- a/view/css/admin/view.css
+++ b/view/css/admin/view.css
@@ -62,9 +62,16 @@ body.admin div#main div.widget {
     margin-bottom: 20px;
 }
 
-body.admin div#main div.center {
-    margin-bottom: 20px;
+body.admin div#main > div.center {
+    width: 620px;
+    float: left;
 }
+
+body.admin div#main > div.side {
+    float: right;
+    width: 300px;
+}
+
 
 body.admin div#main div.board ul {
     padding: 0;
