--- a/view/css/feed.css
+++ b/view/css/feed.css
@@ -38,9 +38,9 @@ div.subitem > div.content-image > a.project{float:left;display:block;clear:right
 body.admin div#main > div.side{width:300px}
 body.admin div#main > div.side > div.widget{margin-bottom:20px}
 body.admin div#main > div.side > div.widget.feed{}
-body.admin div#main > div.side > div.widget.feed > div.scroll-pane{height:300px;}
+body.admin div#main > div.side > div.widget.feed > div.scroll-pane{height:670px;}
 body.admin div#main > div.side > div.widget.feed h3{margin-top:0;padding-bottom:10px;border-bottom:1px solid #E95C5C}
-
+body.admin div#main > div.side > div.widget.feed > p.categories > a{margin-right:15px;font-size:11px !important;text-transform:uppercase;}
 body.admin div#main > div.side > div.widget.feed > div.scroll-pane div.subitem{width:230px;padding-left:5px}
 body.admin div#main > div.side > div.widget.feed div.subitem span.datepub{margin-bottom:5px}
 
@@ -49,7 +49,7 @@ body.admin div#main > div.side > div.widget.feed div.subitem span.datepub{margin
 *****************************/
 body.admin div#main > div.widget.feed{padding-left:100px;padding-right:100px}
 body.admin div#main > div.widget.feed > h3.title{margin-left:-100px;margin-bottom:25px}
-body.admin div#main > div.widget.feed > p.categories > a{margin-right:15px} 
+body.admin div#main > div.widget.feed > p.categories > a{margin-right:15px;font-size:12px !important;text-transform:uppercase;}
 body.admin div#main > div.widget.feed > div.scroll-pane{height:215px}
 body.admin div#main > div.widget.feed div.subitem{padding-left:5px}
 body.admin div#main > div.widget.feed div.subitem > span.datepub{float:left;width:70px;margin-right:30px;clear:none;line-height:1.2em}
