el tema de nombres largos (de proyecto y de usuario) * widget del proyecto * cuadritos de sharemates y cofinanciadores * central y lateral de las páginas de perfil de usuario y de proyecto.

--- a/view/css/project/view.css
+++ b/view/css/project/view.css
@@ -13,6 +13,8 @@
 @import url('widget/invest.css');
 @import url('widget/schedule.css');
 @import url('../user/widget/user.css');
+@import url('../user/widget/support.css');
+@import url('../worth/base.css');
 @import url('../worth/legend.css');
 
 
