--- a/view/css/user/widget/mates.css
+++ b/view/css/user/widget/mates.css
@@ -1,23 +1,29 @@
+div.widget.user-mates{padding-top:10px;padding-bottom:0}
+div.widget.user-mates h3.supertitle{margin-bottom:8px}
+
 div.widget.user-mates div.users,div.widget.user-mates div.categories{height:auto;overflow:visible;}
 div.widget.user-mates div.users ul,div.widget.user-mates div.categories ul {list-style: none;margin: 0;padding: 0;height:auto;overflow:auto;}
-div.widget.user-mates div.categories{height: auto;overflow: visible;padding-bottom: 10px;}	
+div.widget.user-mates div.categories{height: auto;padding-bottom: 10px;line-height:1em;overflow:hidden}	
+div.widget.user-mates div.categories ul{overflow:hidden}
 div.widget.user-mates div.categories ul li{display:inline-block;margin-right:5px}
 div.widget.user-mates div.categories ul li a{color:#636466;text-transform:uppercase;text-decoration:none;font-size:11px}
 div.widget.user-mates div.categories ul li a:hover{color:#20B3B2}
 
 div.widget.user-mates div.users{clear:both;};
-div.widget.user-mates div.users h3.supertitle{border-top: 1px solid #808285;border-bottom:1px dashed #818284;padding:5px 0 5px 5px;color:#20B3B2;font-size:12px;}
+div.widget.user-mates div.users h3.supertitle{border-top: 1px solid #808285;border-bottom:1px dashed #818284;padding:5px 0 5px 5px;color:#20B3B2;font-size:12px;margin-bottom:8px}
 div.widget.user-mates div.users h3.supertitle:hover{background:#E8E9E9;}
 div.widget.user-mates .users ul > li {        
-    height: 4.5em;
-    width: 50%;
-    float: left;
-    position: relative;
-    overflow: hidden;
-/*    background: url("../../avatar/m.png") no-repeat 0 10px;    //@FIXME revisar esto porque los avatares trasparentes o pequeños salen con este abajo*/
-		
+float: left;
+height: 62px;
+margin-bottom: 8px;
+margin-right: 3px;
+overflow: hidden;
+padding-top: 2px;
+position: relative;
+width: 127px;		
 }
 
+div.widget.user-mates .users ul > li.nomarginright{margin-right:0}
 div.widget.user-mates .users ul > li:hover > div.user > h4 > a{color:#19B4B2;}
 
 
@@ -97,6 +103,12 @@ div.widget.user-mates a.more  {
     text-decoration: none;
 	/*padding-right:20px;*/
 	/*background:url(more.png) right no-repeat;*/
-	line-height:1em;height:1em;margin-bottom:5px;   
+	line-height:1em;height:1em;margin-bottom:15px;   
+	margin-top:8px;
 }
 
+
+
+/* only center widget
+**********************/
+div.center div.widget.user-mates .users ul > li{width:276px !important; max-width:276px !important;margin-bottom:0}
