* limpiando maquetacion estatica vista lista feeds * arreglo Feed::time_ago * feed en cron y en cambios de estado/fechas proyecto * catalogo errcode en controller/tpv * Ojo! recompensas limitadas no disponibles al aportar

--- a/view/css/project/widget/supporters.css
+++ b/view/css/project/widget/supporters.css
@@ -429,7 +429,7 @@ div.widget.project-investors .investors ul li dl dd.worthcracy ul li > strong {
 }
 
 
-/* rediseÃ±o
+/* rediseño
 ************************/
 div.widget.project-supporters .supporters > ul > li {height:70px !important}
 div.widget.project-supporters .supporters > ul > li > div.supporter h4{padding-bottom:3px;border-bottom:#D5D5D6 1px solid;overflow:hidden;margin-bottom:6px}
