--- a/view/css/feed.css
+++ b/view/css/feed.css
@@ -53,5 +53,5 @@ body.admin div#main > div.widget.feed > p.categories > a{margin-right:15px;font-
 body.admin div#main > div.widget.feed > div.scroll-pane{height:215px}
 body.admin div#main > div.widget.feed div.subitem{padding-left:5px}
 body.admin div#main > div.widget.feed div.subitem > span.datepub{float:left;width:80px;margin-right:10px;clear:none;line-height:1.2em}
-body.admin div#main > div.widget.feed div.subitem > div.content-pub{float:left;width:600px;clear:none;margin-top:0;line-height:1.2em}
+body.admin div#main > div.widget.feed div.subitem > div.content-pub{float:left;width:600px;clear:none;margin-top:0;}
 
