--- a/view/css/project/widget/project.css
+++ b/view/css/project/widget/project.css
@@ -27,12 +27,13 @@ div.widget.project div.image {
     background-color: #deddde;
     margin: 12px 12px 10px;
     padding: 0 !important;
+overflow: hidden;
     position: relative;
 }
 
 div.widget.project div.image img {
-    width: 100%;
-    height: 100%;
+/*    width: 100%;
+    height: 100%; */
 }
 
 div.widget.project div.image div.tagmark {
