* arreglos estilos pagina de comunidad * tabla para las preferencias de notificacion * gestion de preferencias en el dashboard

--- a/view/css/user/profile.css
+++ b/view/css/user/profile.css
@@ -4,16 +4,19 @@
 @import url('widget/supporters.css');
 @import url('widget/mates.css');
 
-body.user-profile div#main div.widget {
+body.user-profile div#main div.widget, 
+body.community div#main div.widget {
     margin-bottom: 20px;
 }
 
-body.user-profile div#main > div.center {
+body.user-profile div#main > div.center,
+body.community div#main > div.center {
     width: 620px;
     float: left;        
 }
 
-body.user-profile div#main > div.side {
+body.user-profile div#main > div.side,
+body.community div#main > div.side {
     float: right;
     width: 300px;
 }
@@ -86,7 +89,7 @@ div.center div.widget.user-mates .users ul > li span.contact a:hover{
 
 /* http://goteo.juliancanaves.es/user/profile/esenabre/sharemates
 *********************************************************************************************/
-/* lista de categorías */
+/* lista de categorï¿½as */
 div.center > div.widget.categorylist{padding-bottom:12px;}
 div.center > div.widget.categorylist ul{list-style:none;display:inline-block;margin:0;padding-left:0;}
 div.center > div.widget.categorylist ul li{display:inline-block;margin-left:0;padding-left:0;}
@@ -108,7 +111,7 @@ div.center > div.widget.categorylist > div.list{padding-top:5px;}
 	div.center > div.widget.categorylist > div.list > ul > li{margin-right:0.5em;}
 	div.center > div.widget.categorylist > div.list > ul > li > a{text-transform:uppercase;font-size:12px;}
 
-/* detalle de categorías (encabezado de categoría)*/
+/* detalle de categorï¿½as (encabezado de categorï¿½a)*/
 div.center > div.widget.user-mates > h3.title{margin: 0 0 1em;padding: 0 2px 0.5em;font-size: 12px;font-weight: normal; background:none; border-bottom: 1px dashed #818284;border-top: 1px solid #808285;color: #20B3B2;font-size: 12px;padding: 5px 0 5px 5px;}
 
 
