--- a/view/css/dashboard/view.css
+++ b/view/css/dashboard/view.css
@@ -1,6 +1,7 @@
 @import url('activity/summary.css');
 @import url('profile/profile.css');
 @import url('projects/rewards.css');
+@import url('projects/summary.css');
 
 body.dashboard div#main {
     overflow: visible;
@@ -156,35 +157,6 @@ body.dashboard div#project-selector select{
     text-transform: uppercase;
     font-size: 14px;
 }
-
-/* status */
-body.dashboard div#main div.status {
-    float: left;
-    color: #bcbdbd;
-    border: none !important;
-    padding: 0px !important;
-    margin-right: 20px;
-}
-
-body.dashboard div#main div.status #project-status {
-    background-color: #ffffff;
-    padding: 20px 20px 62px 30px !important;
-	widt:290px;
-}
-
-body.dashboard div#main div.status #project-status h3{
-	font-size:20px;
-}
-
-body.dashboard div#main div#project-support h3.title.ronda {
-	color:#20B3B2;
-	position:absolute;
-	top:20px;
-	left:220px;
-    text-transform: lowercase;
-    background: none !important;
-}
-
 
 /* Lista entradas */
 body.dashboard div#main div.post {
