--- a/view/css/home.css
+++ b/view/css/home.css
@@ -21,97 +21,104 @@ body.home div#main div.widget.projects div.widget.project{
 	margin:0 40px 20px 0;
 }
 
-body.home div#main div.learn ul {
-    position: absolute;
-    bottom: 22px;
-    left: 20px;
-    list-style: none;
-    margin: 0;    
-    height: 10px;
-    padding: 10px 0px 0px;
-    z-index: 900;
-    line-height: 24px;
+body.home div#main div.learn ul.slderpag {
+    margin: 8px 0 0 0;
+	list-style:none;
+	padding:0px;
+	float:left;
+	height:auto;
 }
 
-body.home div#main div.learn ul li {
+body.home div#main div.learn ul.slderpag li {
+    cursor:pointer;
     display: block;
     float: left;
-	cursor:pointer;
-    overflow: hidden; 
-/*    margin-right: 4px; */
-    line-height: 24px;
+    overflow: hidden;
+	margin: 0px 4px 5px 4px;
 }
 
-body.home div#main div.learn ul li > * {
-    display: block;
-    height: 100%;
-    width: 100%; 
-    text-indent: 2000px;
-    line-height: 2000px;
+body.home div#main div.learn ul.slderpag li a {
+    width: 12px;
+    height: 6px;
+    margin-top: 2px;
+    background-color: #cdcdce;
+    color: #cdcdce;
+	display:block;
 }
 
-body.home div#main div.learn ul li.navi {
-    width: 18px;
-    height: 18px;
-    margin: 3px;
+body.home div#main div.learn ul.slderpag li a:hover {
+    background-color: #20b3b2;
+    color: #20b3b2;
 }
 
-
-body.home div#main div.learn ul li.navi > a {
-    background-color: #cdcdce;       
-}
-
-body.home div#main div.learn ul li.navi > a:hover {
-    background-color: #20B3B2;
-}
-
-body.home div#main div.learn ul li.navi > a.active {
+body.home div#main div.learn ul.slderpag li.current a {
     background-color: #808184 !important;
+    color: #808184 !important;
 }
 
-body.home div#main div.learn ul li.prev,
-body.home div#main div.learn ul li.next {
-    width: 24px;
-    height: 24px;
+body.home div#main div.learn a.next,
+body.home div#main div.learn a.prev {
+    width: 16px;
+    height: 16px;
 	line-height: 2000px;
 	overflow: hidden;
+	float:left;
+	margin: 9px 0 0 0;
+	cursor:pointer;
+/*	display: inline-block; */
 }
 
-
-body.home div#main div.learn ul li.prev {
-	background: url('arrowslider-sprt.png') scroll no-repeat 0 0;
+body.home div#main div.learn a.prev {
+	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 0;
 }
 
-body.home div#main div.learn ul li.prev:hover {
-	background: url('arrowslider-sprt.png') scroll no-repeat 0 -48px;
+body.home div#main div.learn a.prev:hover {
+	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 -32px;
 }
 
-body.home div#main div.learn ul li.next {
-	background: url('arrowslider-sprt.png') scroll no-repeat 0 -24px;
+body.home div#main div.learn a.next{
+	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 -16px;
 }
 
-body.home div#main div.learn ul li.next:hover {
-	background: url('arrowslider-sprt.png') scroll no-repeat 0 -72px;
+body.home div#main div.learn a.next:hover {
+	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 -48px;
 }
 
-body.home div#main div.learn div.post {
+body.home div#main div.learn div.slder_container {
+    width:900px;
+	height:290px;
+	display:none;
+}
+
+body.home div#main div.learn  div.slder_container div.slder_slide {
+    width:900px;
+	height:290px;
+	display:block;
+}
+
+body.home div#main div.learn  div.slder_container div.slder_slide . div.post {
     position: relative;
     min-height: 305px;
     padding-left: 520px;
     display: none;
 }
 
-body.home div#main div.learn div.post div.read_more{
-    bottom: -10px;
+body.home div#main div.learn div.slder_container div.slder_slide div.post div.read_more{
+    bottom: 0px;
     right: 20px;
     position: absolute;
 }
 
-body.home div#main div.learn div.embed,
-body.home div#main div.learn div.image {
-    position: absolute;
-    left: 0;
-    top: 0;        
+body.home div#main div.learn div.slder_container div.slder_slide div.post h3,
+body.home div#main div.learn div.slder_container div.slder_slide div.post div.description {
+	float: left;
+    margin: 0 0 10px 20px;
+    width: 380px;
+}
+
+body.home div#main div.learn div.slder_container div.slder_slide div.post div.embed,
+body.home div#main div.learn div.slder_container div.slder_slide div.post div.image {
+	float:left;
     width: 500px;
     height: 285px;
 }
