--- a/view/css/project/widget/message.css
+++ b/view/css/project/widget/message.css
@@ -4,7 +4,7 @@ div.project-message{
 }
 
 div.project-message div#bocadillo{
-	background:url(../../bocadillo.jpg) no-repeat;
+	background:url(/view/css/bocadillo.jpg) no-repeat;
 	position:absolute;
 	width:56px;
 	height:51px;
