--- a/view/css/project/widget/messages.css
+++ b/view/css/project/widget/messages.css
@@ -32,7 +32,7 @@ div.project-messages div.child .avatar {
     display: block;
     width: 50px;
     height: 50px;
-/*    background: url('../../avatar/s.png');        //@FIXME revisar esto porque los avatares trasparentes o pequeños salen con este abajo*/
+/*    background: url('/view/css/avatar/s.png');        //@FIXME revisar esto porque los avatares trasparentes o pequeños salen con este abajo*/
 }
 
 div.project-messages div.message .user,
