--- a/view/css/project/widget/rewards.css
+++ b/view/css/project/widget/rewards.css
@@ -78,7 +78,7 @@ div.widget.project-rewards > div.individual ul li div.amount span.euro,
 #rewards-summary > div.individual ul li div.amount span.euro {
     padding: 5px 20px 5px 10px;
     margin: 0px;
-    background: url('../../euro/violet/s.png') no-repeat right center;
+    background: url('/view/css/euro/violet/s.png') no-repeat right center;
     display: inline-block;
     background-color: #e7e7e7;
     border-right: #e7e7e7 solid 5px;
@@ -144,37 +144,37 @@ div.widget.project-rewards ul li > .name,
 div.widget.project-invest ul li.file,
 div.widget.project-rewards ul li.file,
 #rewards-summary ul li.file{
-    background-image: url('../../icon/m/file.png');
+    background-image: url('/view/css/icon/m/file.png');
 }
 
 div.widget.project-invest ul li.money,
 div.widget.project-rewards ul li.money,
 #rewards-summary ul li.money {
-    background-image: url('../../icon/m/money.png');
+    background-image: url('/view/css/icon/m/money.png');
 }
 
 div.widget.project-invest ul li.code,
 div.widget.project-rewards ul li.code,
 #rewards-summary ul li.code {
-    background-image: url('../../icon/m/code.png');
+    background-image: url('/view/css/icon/m/code.png');
 }
 
 div.widget.project-invest ul li.service,
 div.widget.project-rewards ul li.service,
 #rewards-summary ul li.service {
-    background-image: url('../../icon/m/service.png');
+    background-image: url('/view/css/icon/m/service.png');
 }
 
 div.widget.project-invest ul li.manual,
 div.widget.project-rewards ul li.manual,
 #rewards-summary ul li.manual {
-    background-image: url('../../icon/m/manual.png');
+    background-image: url('/view/css/icon/m/manual.png');
 }
 
 div.widget.project-invest ul li.product,
 div.widget.project-rewards ul li.product,
 #rewards-summary ul li.product {
-    background-image: url('../../icon/m/product.png');
+    background-image: url('/view/css/icon/m/product.png');
 }
 
 div.center div.widget.project-invest ul li.product, div.center div.widget.project-rewards ul li.product, div.center  #rewards-summary ul li.product{	background-position: 10px 10px;}
@@ -182,13 +182,13 @@ div.center div.widget.project-invest ul li.product, div.center div.widget.projec
 div.widget.project-invest ul li.design,
 div.widget.project-rewards ul li.design,
 #rewards-summary ul li.design {
-    background-image: url('../../icon/m/design.png');
+    background-image: url('/view/css/icon/m/design.png');
 }
 
 div.widget.project-invest ul li.other,
 div.widget.project-rewards ul li.other,
 #rewards-summary ul li.other {
-    background-image: url('../../icon/m/other.png');
+    background-image: url('/view/css/icon/m/other.png');
 }
 
 div.widget.project-rewards > a.more {
