--- a/view/css/project/widget/summary.css
+++ b/view/css/project/widget/summary.css
@@ -30,9 +30,84 @@ div.widget.project-summary > div {
     margin-bottom: 2em;
 }
 
-div.widget.project-summary div.gallery div.gallery-image {
-    display: none;
+div.widget.project-summary div.prjct-gallery-container {
+	width:580px;
+	height:380px;
+	display:none;
+}
+
+div.widget.project-summary div.prjct-gallery-container div.gallery-image {
     text-align: center;
+	width:580px;
+	height:380px;
+	display:block;
+}
+
+div.widget.project-summary div#prjct-gallery  {
+	float:left;
+}
+
+div.widget.project-summary div#prjct-gallery  ul.slderpag {
+    margin: 8px 0 0 0;
+	list-style:none;
+	padding:0px;
+	float:left;
+	height:auto;
+}
+
+div.widget.project-summary div#prjct-gallery  ul.slderpag li {
+    cursor:pointer;
+    display: block;
+    float: left;
+    overflow: hidden;
+	margin: 0px 4px 5px 4px;
+}
+
+div.widget.project-summary div#prjct-gallery  ul.slderpag li a {
+    width: 12px;
+    height: 12px;
+    margin-top: 2px;
+    background-color: #cdcdce;
+    color: #cdcdce;
+	display:block;
+}
+
+div.widget.project-summary div#prjct-gallery  ul.slderpag li a:hover {
+    background-color: #20b3b2;
+    color: #20b3b2;
+}
+
+div.widget.project-summary div#prjct-gallery  ul.slderpag li.current a {
+    background-color: #808184 !important;
+    color: #808184 !important;
+}
+
+div.widget.project-summary div#prjct-gallery  a.next,
+div.widget.project-summary div#prjct-gallery  a.prev {
+    width: 16px;
+    height: 16px;
+	line-height: 2000px;
+	overflow: hidden;
+	float:left;
+	margin: 8px 0 0 0;
+	cursor:pointer;
+/*	display: inline-block; */
+}
+
+div.widget.project-summary div#prjct-gallery  a.prev {
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 0;
+}
+
+div.widget.project-summary div#prjct-gallery  a.prev:hover {
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -32px;
+}
+
+div.widget.project-summary div#prjct-gallery  a.next{
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -16px;
+}
+
+div.widget.project-summary div#prjct-gallery  a.next:hover {
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -48px;
 }
 
 
