--- a/view/css/project/widget/supporters.css
+++ b/view/css/project/widget/supporters.css
@@ -48,7 +48,7 @@ div.widget.project-supporters dl.summary dt.reached {
 }
 
 div.widget.project-supporters dl.summary dd.reached {
-    background: url("../../euro/violet/l.png") no-repeat scroll right center transparent;        
+    background: url("/view/css/euro/violet/l.png") no-repeat scroll right center transparent;        
     padding-right: 30px;
     color: #96238F;
 }
@@ -159,7 +159,7 @@ div.widget.project-supporters .supporters ul li dl dd.amount {
 }
 
 div.widget.project-supporters .supporters ul li dl dd.amount {
-    background: url("../../euro/violet/m.png") no-repeat scroll right center transparent;        
+    background: url("/view/css/euro/violet/m.png") no-repeat scroll right center transparent;        
     height: 27px;    
     line-height: 27px;
     padding-right: 22px;
@@ -233,7 +233,7 @@ div.widget.project-supporters .supporters ul li dl dd.worthcracy ul li > strong 
     left: 50%;
     margin-left: -100px;
     text-align: center;
-    background: url('../../worth/beak.png') no-repeat center top;
+    background: url('/view/css/worth/beak.png') no-repeat center top;
     padding-top: 6px;
 }
 
@@ -350,7 +350,7 @@ div.widget.project-investors .investors ul li dl dd.amount {
 }
 
 div.widget.project-investors .investors ul li dl dd.amount {
-    background: url("../../euro/violet/s.png") no-repeat scroll right center transparent;
+    background: url("/view/css/euro/violet/s.png") no-repeat scroll right center transparent;
     height: 20px;
     line-height: 21px;
     padding-right: 18px;
@@ -424,7 +424,7 @@ div.widget.project-investors .investors ul li dl dd.worthcracy ul li > strong {
     left: 50%;
     margin-left: -100px;
     text-align: center;
-    background: url('../../worth/beak.png') no-repeat center top;
+    background: url('/view/css/worth/beak.png') no-repeat center top;
     padding-top: 6px;
 }
 
