--- a/view/css/project/widget/updates.css
+++ b/view/css/project/widget/updates.css
@@ -56,6 +56,7 @@ div.widget.project-updates > div {
 	color: #58595B;
 	padding: 0 0 20px 0;
 	margin: 18px 18px 12px 18px;
+	float:left;
 }
 .project-updates .post .embed{
     width: 500px;
@@ -74,15 +75,86 @@ div.widget.project-updates > div {
 	font-style:oblique
 }
 
-.project-updates .widget.post .gallery-image{
-	text-align:left;
+.project-updates .post .post-gallery-container{
+	width:580px;
+	height:300px;
+	display:none;
 }
-.project-updates .widget.post .gallery-image img{
+.project-updates  .post .post-gallery-container  .gallery-image{
+	text-align:left;
+	width:580px;
+	height:300px;
+	display:block;
+}
+.project-updates .post .gallery-image img{
 	margin: 0 18px;
 }
+.project-updates .post div.post-gallery  ul.slderpag{
+    margin: 8px 0 0 0;
+	list-style:none;
+	padding:0px;
+	float:left;
+	height:auto;
+}
+
+.project-updates .post div.post-gallery  ul.slderpag li{
+    cursor:pointer;
+    display: block;
+    float: left;
+    overflow: hidden;
+	margin: 0px 4px 5px 4px;
+}
+
+.project-updates .post div.post-gallery  ul.slderpag li a{
+    width: 12px;
+    height: 12px;
+    margin-top: 2px;
+    background-color: #cdcdce;
+    color: #cdcdce;
+	display:block;
+}
+
+.project-updates .post div.post-gallery  ul.slderpag li a:hover{
+    background-color: #20b3b2;
+    color: #20b3b2;
+}
+
+.project-updates .post div.post-gallery  ul.slderpag li.current a{
+    background-color: #808184 !important;
+    color: #808184 !important;
+}
+
+.project-updates .post div.post-gallery  a.next,
+.project-updates .post div.post-gallery  a.prev{
+    width: 16px;
+    height: 16px;
+	line-height: 2000px;
+	overflow: hidden;
+	float:left;
+	margin: 8px 0 0 0;
+	cursor:pointer;
+/*	display: inline-block; */
+}
+
+.project-updates .post div.post-gallery  a.prev{
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 0;
+}
+
+.project-updates .post div.post-gallery  a.prev:hover{
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -32px;
+}
+
+.project-updates .post div.post-gallery  a.next{
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -16px;
+}
+
+.project-updates .post div.post-gallery  a.next:hover{
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -48px;
+}
+
 .project-updates .post .comments-num{
 	float:left;
-	background: transparent url('../../ico-blogcomment.png') scroll no-repeat  0 0;
+	background: transparent url('/view/css/ico-blogcomment.png') scroll no-repeat  0 0;
 	padding: 0 0 0 26px;
 	height:24px;
 	margin: 0 0 0 20px;
@@ -115,7 +187,7 @@ div.post-comments div.message .avatar {
     display: block;
     width: 50px;
     height: 50px;
-/*    background: url('../../avatar/s.png');    //@FIXME revisar esto porque los avatares trasparentes o pequeños salen con este abajo*/
+/*    background: url('/view/css/avatar/s.png');    //@FIXME revisar esto porque los avatares trasparentes o pequeños salen con este abajo*/
 }
 
 div.post-comments div.message .user {
@@ -163,12 +235,12 @@ div.post-comments div.message blockquote {
 	color:#cabcbf;
 }
 .project-updates .post ul.share-goteo li.twitter a{
-	background: transparent url('../../twitter.png') scroll no-repeat  0 0;
+	background: transparent url('/view/css/twitter.png') scroll no-repeat  0 0;
 	color:#13c2ec;
 	text-decoration:none;
 }
 .project-updates .post ul.share-goteo li.facebook a{
-	background: transparent url('../../facebook.png') scroll no-repeat  0 0;
+	background: transparent url('/view/css/facebook.png') scroll no-repeat  0 0;
 	color:#4a6393;
 	text-decoration:none;
 }
