--- a/view/css/user/widget/supporters.css
+++ b/view/css/user/widget/supporters.css
@@ -23,7 +23,7 @@ div.widget.user-supporters .supporters ul li .avatar {
     height: 50px;
     text-align: center;
     display: block;
-/*    background: url('../../avatar/m.png');    //@FIXME revisar esto porque los avatares trasparentes o pequeños salen con este abajo*/
+/*    background: url('/view/css/avatar/m.png');    //@FIXME revisar esto porque los avatares trasparentes o pequeños salen con este abajo*/
 }
 
 div.widget.user-supporters .supporters ul li .avatar img {
@@ -96,7 +96,7 @@ div.widget.user-supporters .supporters ul li dl dd.amount {
 }
 
 div.widget.user-supporters .supporters ul li dl dd.amount {
-    background: url("../../euro/violet/s.png") no-repeat scroll right center transparent;        
+    background: url("/view/css/euro/violet/s.png") no-repeat scroll right center transparent;        
     height: 20px;    
     line-height: 21px;
     padding-right: 18px;
@@ -170,7 +170,7 @@ div.widget.user-supporters .supporters ul li dl dd.worthcracy ul li > strong {
     left: 50%;
     margin-left: -100px;
     text-align: center;
-    background: url('../../worth/beak.png') no-repeat center top;
+    background: url('/view/css/worth/beak.png') no-repeat center top;
     padding-top: 6px;
 }
 
